<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:background="@color/backgroundText"
        android:minHeight="48dp"
        android:text="@string/setting_timer"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="@+id/flow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout3" />

    <Button
        android:id="@+id/bDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="112dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flow"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bMinus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/minus"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="470dp" />

    <Button
        android:id="@+id/bPlus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/plus"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="470dp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="3dp"
        app:constraint_referenced_ids="bMinus,bPlus"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/countGlasses"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="13dp"
            android:background="@color/backgroundText"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/backgroundText"
            android:text="@string/timer_time"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>